# huffman_encode_decode

./: .gitignore  CMakeLists.txt  README.md  ip_file.txt
src/: debug_msg.h  decode.cpp  decode.h  encode.cpp  encode.h  file_decode.cpp  file_decode.h  file_encode.cpp  file_encode.h  generic.cpp  generic.h  huffman_tree.cpp  huffman_tree.h  main.cpp  source.h
